// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<CurrentPhase /> render: match snapshot - action 1`] = `
<DocumentFragment>
  <div
    class="current-phase"
  >
    <div
      class="current-phase__heading player"
    >
      <h2>
        action
      </h2>
    </div>
    <div
      class="current-phase__content"
    >
      <div
        class="current-phase__action"
      >
        <div
          aria-disabled="true"
          aria-label="card player_move_1"
          aria-pressed="false"
          class="card card--active actionCard"
        >
          <div
            class="actionCardIcon"
          />
          <div
            class="actionCardTitle title"
          >
            move
          </div>
          <div
            class="actionCardText paragraph"
          >
            Move up to two different Units
          </div>
          <div
            class="actionCardWaterMark"
          />
        </div>
        <button
          class="button disabled"
        >
          SKIP
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CurrentPhase /> render: match snapshot - planification 1`] = `
<DocumentFragment>
  <div
    class="current-phase"
  >
    <div
      class="current-phase__heading player"
    >
      <h2>
        planification
      </h2>
    </div>
    <div
      class="current-phase__content"
    >
      <div
        class="current-phase__planification"
      >
        <div
          aria-disabled="true"
          class="card cardSilhouette"
        >
          <div
            class="silhouetteTitle"
          >
            next
          </div>
          <div
            class="silhouetteText"
          >
            Drag here the card you wish to use next round
          </div>
        </div>
        <div
          aria-disabled="true"
          class="card cardSilhouette"
        >
          <div
            class="silhouetteTitle"
          >
            future
          </div>
          <div
            class="silhouetteText"
          >
            Drag here the card you wish to use in two rounds
          </div>
        </div>
        <button
          class="button disabled player"
        >
          GO
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CurrentPhase /> render: match snapshot - planification with cards 1`] = `
<DocumentFragment>
  <div
    class="current-phase"
  >
    <div
      class="current-phase__heading player"
    >
      <h2>
        planification
      </h2>
    </div>
    <div
      class="current-phase__content"
    >
      <div
        class="current-phase__planification"
      >
        <div
          aria-disabled="true"
          aria-label="card player_move_2"
          aria-pressed="false"
          class="card card--available actionCard"
        >
          <div
            class="actionCardIcon"
          />
          <div
            class="actionCardTitle title"
          >
            move
          </div>
          <div
            class="actionCardText paragraph"
          >
            Move up to two different Units
          </div>
          <div
            class="actionCardWaterMark"
          />
        </div>
        <div
          aria-disabled="true"
          aria-label="card player_recruit_1"
          aria-pressed="false"
          class="card card--available actionCard"
        >
          <div
            class="actionCardIcon"
          />
          <div
            class="actionCardTitle title"
          >
            recruit
          </div>
          <div
            class="actionCardText paragraph"
          >
            Recruit units at up to two different Settlements
          </div>
          <div
            class="actionCardWaterMark"
          />
        </div>
        <button
          class="button player"
        >
          GO
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
